Refinamento leve codigo Main

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
-  google_fonts: ^2.0.0 
+  google_fonts: ^2.1.0 
+  share: ^2.0.4
   
 
 
